---------------------
subunit release notes
---------------------

0.0.3 (In development)
----------------------

  CHANGES:
  
    * License change, by unanimous agreement of contributors to BSD/Apache
      License Version 2.0. This makes Subunit compatible with more testing
      frameworks.

  IMPROVEMENTS:

    * In the python API addExpectedFailure from python 2.7/3.1 is now
      supported.

    * INSTALLDIRS can be set to control the perl MakeMaker 'INSTALLDIRS'
      viarable when installing.

    * Multipart test outcomes are tentatively supported; the exact protocol
      for them, both serialiser and object is not yet finalised. Testers and
      early adopters are sought.

  BUG FIXES:

    * Install progress_model.py correctly.

  API CHANGES:

  INTERNALS:

0.0.2
-----

  CHANGES:

  IMPROVEMENTS:

    * A number of filters now support ``--no-passthrough`` to cause all
      non-subunit content to be discarded. This is useful when precise control
      over what is output is required - such as with subunit2junitxml.

    * A small perl parser is now included, and a new ``subunit-diff`` tool
      using that is included. (Jelmer Vernooij)

    * Subunit streams can now include optional, incremental lookahead
      information about progress. This allows reporters to make estimates
      about completion, when such information is available. See the README
      under ``progress`` for more details.

    * ``subunit-filter`` now supports regex filtering via ``--with`` and
      ``without`` options. (Martin Pool)

    * ``subunit2gtk`` has been added, a filter that shows a GTK summary of a
      test stream.

    * ``subunit2pyunit`` has a --progress flag which will cause the bzrlib
      test reporter to be used, which has a textual progress bar. This requires
      a recent bzrlib as a minor bugfix was required in bzrlib to support this.

    * ``subunit2junitxml`` has been added. This filter converts a subunit