@@ -13,8 +13,9 @@ subunit release notes
 
   IMPROVEMENTS:
 
-    * In the python API addExpectedFailure from python 2.7/3.1 is now
-      supported.
+    * In the python API ``addExpectedFailure`` and ``addUnexpectedSuccess``
+      from python 2.7/3.1 are now supported. ``addExpectedFailure`` is
+      serialised as ``xfail``, and ``addUnexpectedSuccess`` as ``success``.
 
     * INSTALLDIRS can be set to control the perl MakeMaker 'INSTALLDIRS'
       viarable when installing.
